# CSF-3DFin

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  test.py
CSFDemo/: CSFDemo.cpp  Cfg.h
cmake/: CSFConfig.cmake.in
include/: CMakeLists.txt  Cloth.h
matlab/: csf_filtering.cpp
python/: CSF_3DFin_ext.cpp
python/CSF_3DFin/: __init__.py
src/: CMakeLists.txt  CSF.cpp  CSF.h  Cloth.cpp  Cloth.h  Constraint.cpp  Constraint.h  Particle.cpp  Particle.h  Rasterization.cpp  Rasterization.h  Vec3.h  XYZReader.cpp  XYZReader.h  c2cdist.cpp  c2cdist.h  point_cloud.cpp  point_cloud.h
