[build-system]
requires = ["scikit-build-core~=0.10.0", "nanobind ~=2.2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "CSF_3DFin"
version = "2.0.0"
authors = [{name="Jianbo Qi", email="jianboqi@126.com"}]
maintainers = [{name="Romain Janvier", email="romain.janvier@hotmail.fr"}]
license = { file = "LICENSE.txt" }
keywords=["LiDAR", "DTM", "DSM", "Classification"]
description="CSF: Ground Filtering based on Cloth Simulation"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>1.23" #NEP 29
]

[project.urls]
Repository = "https://github.com/3DFin/CSF-3DFIN"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
cmake.args = ["-DCOMPILE_PYTHON_MODULE=ON"]

[tool.cibuildwheel]
build = "cp3{10,11,12,13}-*"
archs = ["auto64"] # limit to 64bits builds

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"